data/derived/comb/progs/unify/prog5752.ml.out
Characters 165-210:
  else if  List.length l1 < List.length l2 then clone 0 ((List.length l2) - (List.length l1))
                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
